Closed
Bug 376935
Opened 18 years ago
Closed 18 years ago
posinset and setsize incorrect for lists with poor markup
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: scott, Assigned: surkov)
Details
Attachments
(2 files)
|
442 bytes,
text/html
|
Details | |
|
2.01 KB,
patch
|
aaronlev
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070409 Minefield/3.0a4pre
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a4pre) Gecko/20070409 Minefield/3.0a4pre
posinset and setsize should match what is rendered to the page even for pages that have incorrect markup.
Reproducible: Always
| Reporter | ||
Comment 1•18 years ago
|
||
Test case shows a list of 9 items, only 7 of which get rendered due to bad markup. posinset and setsize should match the number and position that are rendered
| Assignee | ||
Comment 2•18 years ago
|
||
Assignee: aaronleventhal → surkov.alexander
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #261098 -
Flags: review?(aaronleventhal)
Updated•18 years ago
|
Attachment #261098 -
Flags: review?(aaronleventhal) → review+
| Assignee | ||
Comment 3•18 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•