Fix for bug 376935 - posinset and setsize incorrect for lists with poor markup, r=aaronlev